# django-q-filter

./: .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
example/: db.sqlite3
example/core/: asgi.py  settings.py  urls.py  wsgi.py
example/food/: admin.py  models.py  views.py
example/food/fixtures/: food.yaml
example/food/migrations/: 0001_initial.py
example/food/templates/food/: recipe_list.html
example/food/templatetags/: tags.py
example/food/tests/: __init__.py  match.py  qfilter.py
qfilter/: __init__.py  mixins.py  utils.py  vars.py
qfilter/forms/: __init__.py  query.py
qfilter/mixins/: __init__.py  match.py  view.py
qfilter/static/: jquery.formset.js  qquery.css  qquery.js
qfilter/templates/qfilter/: qquery_filter.html
tests/: __init__.py  settings.py
