[metadata]
license_file = LICENSE.md

[flake8]
ignore = W0511

[isort]
skip=.tox
atomic=true
multi_line_output=5
extra_standard_library=types
known_third_party=pytest,_pytest,django,pytz,uritemplate
known_first_party=qfilter,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = qfilter/*,tests/*
branch = 1

[coverage:report]
include = qfilter/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError
